--- a/build.gradle
+++ b/build.gradle
@@ -41,9 +41,9 @@ allprojects{
         annotationProcessor libs.mapstructProcessor
         implementation libs.postgreSQL
         implementation libs.springBootDataJpa
-        implementation libs.springBootStarterSecurity
+        //implementation libs.springBootStarterSecurity
         //implementation libs.springCloudOpenFeign
-        //implementation libs.jwt
+        implementation libs.jwt
         //implementation libs.springCloudStarterSleuth
         // implementation libs.springCloudStarterZipkin
 
