--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -43,13 +43,13 @@ ext {
             graphqlJavaTools        : "com.graphql-java-kickstart:graphql-java-tools:13.0.0",
 */
             // jwt
-            //jwt                     : "com.auth0:java-jwt:4.2.2",
+            jwt                     : "com.auth0:java-jwt:4.2.2",
 
             // Spring AMQP ile RabbitMQ Kullanımı
             //springBootStarterAmqp   : "org.springframework.boot:spring-boot-starter-amqp:${versions.springBoot}",
 
             // Spring Security
-            springBootStarterSecurity   : "org.springframework.boot:spring-boot-starter-security:${versions.springBoot}",
+            //springBootStarterSecurity   : "org.springframework.boot:spring-boot-starter-security:${versions.springBoot}",
 
     ]
 }
