--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -13,7 +13,7 @@ ext {
     libs = [
 
             springBootDataJpa      : "org.springframework.boot:spring-boot-starter-data-jpa:${versions.springBoot}",
-
+            springBootDataMongo    : "org.springframework.boot:spring-boot-starter-data-mongodb:${versions.springBoot}",
             springBootWeb          : "org.springframework.boot:spring-boot-starter-web:${versions.springBoot}",
             springBootValidation   : "org.springframework.boot:spring-boot-starter-validation:${versions.springBoot}",
             springBootDevTools     : "org.springframework.boot:spring-boot-devtools:${versions.springBoot}",
@@ -46,7 +46,7 @@ ext {
             jwt                     : "com.auth0:java-jwt:4.2.2",
 
             // Spring AMQP ile RabbitMQ Kullanımı
-            //springBootStarterAmqp   : "org.springframework.boot:spring-boot-starter-amqp:${versions.springBoot}",
+            springBootStarterAmqp   : "org.springframework.boot:spring-boot-starter-amqp:${versions.springBoot}",
 
             // Spring Security
             //springBootStarterSecurity   : "org.springframework.boot:spring-boot-starter-security:${versions.springBoot}",
