--- a/auth-microservice/build.gradle
+++ b/auth-microservice/build.gradle
@@ -7,5 +7,6 @@ dependencies {
     implementation libs.springBootDataJpa
     implementation libs.postgreSQL
     implementation libs.springBootStarterAmqp
+    implementation libs.springBootStarterSecurity
 
 }
