--- a/build.gradle
+++ b/build.gradle
@@ -39,11 +39,8 @@ allprojects{
         implementation libs.springBootValidation
         implementation libs.mapstruct
         annotationProcessor libs.mapstructProcessor
-        implementation libs.postgreSQL
-        implementation libs.springBootDataJpa
-        implementation libs.springBootDataMongo
         //implementation libs.springBootStarterSecurity
-        implementation libs.springCloudOpenFeign
+        //implementation libs.springCloudOpenFeign
         implementation libs.jwt
         //implementation libs.springCloudStarterSleuth
         // implementation libs.springCloudStarterZipkin
