--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -17,7 +17,7 @@ ext {
             springBootWeb          : "org.springframework.boot:spring-boot-starter-web:${versions.springBoot}",
             springBootValidation   : "org.springframework.boot:spring-boot-starter-validation:${versions.springBoot}",
             springBootDevTools     : "org.springframework.boot:spring-boot-devtools:${versions.springBoot}",
-            springCloudOpenFeign   : "org.springframework.cloud:spring-cloud-starter-openfeign:${versions.springCloud}",
+            //springCloudOpenFeign   : "org.springframework.cloud:spring-cloud-starter-openfeign:${versions.springCloud}",
             // Spring Cloud Config için gerekli bağmlılıklar. Server - Client için
             /*springCloudConfig      : "org.springframework.cloud:spring-cloud-starter-config:${versions.springCloud}",
             springCloudConfigServer: "org.springframework.cloud:spring-cloud-config-server:${versions.springCloud}",
@@ -49,7 +49,9 @@ ext {
             springBootStarterAmqp   : "org.springframework.boot:spring-boot-starter-amqp:${versions.springBoot}",
 
             // Spring Security
-            //springBootStarterSecurity   : "org.springframework.boot:spring-boot-starter-security:${versions.springBoot}",
+            springBootStarterSecurity   : "org.springframework.boot:spring-boot-starter-security:${versions.springBoot}",
 
+            // Mail Service
+            springBootMailSender    : "org.springframework.boot:spring-boot-starter-mail:$versions.springBoot"
     ]
 }
