--- a/settings.gradle
+++ b/settings.gradle
@@ -2,4 +2,5 @@ rootProject.name = 'HumanResourcesManagement'
 include 'auth-microservice'
 include 'employee-microservice'
 include 'company-microservice'
+include 'mail-service'
 
